@@ -60,6 +60,11 @@ cdr_syslog
 --- Functionality changes from Asterisk 15.2.0 to Asterisk 15.3.0 ------------
 ------------------------------------------------------------------------------
 
+app_followme
+------------------
+ * Added a new prompt, connecting-prompt, which will be played
+   (if configured) to the "winner" callee before connecting the call.
+
 res_pjsip
 ------------------
  * Users who are matching endpoints by SIP header need to reevaluate their
